Add markup of header

--- a/index.html
+++ b/index.html
@@ -3,10 +3,50 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Глейси</title>
+    <link rel="stylesheet" href="./styles/styles.css">
   </head>
-  <body>
+  <body class="page">
+    <header class="header">
+      <a class="header__logo-link" href="#">
+        <img class="header__logo" src="./images/header-logo.svg" alt="Логотип 'Gllacy shop'." width="137" height="56">
+      </a>
+      <nav class="header__navigation">
+        <ul class="header__navigation-list">
+          <li class="header__navigation-item">
+            <a class="header__navigation-link" href="#">Каталог</a>
+          </li>
+          <li class="header__navigation-item">
+            <a class="header__navigation-link" href="#">Доставка и оплата</a>
+          </li>
+          <li class="header__navigation-item">
+            <a class="header__navigation-link" href="#">О компании</a>
+          </li>
+        </ul>
+      </nav>
+      <a class="header__telefone-link" href="tel:88005558628">+7 800 555-86-28</a>
+      <nav class="header__user-navigation">
+        <ul class="header__user-navigation-list">
+          <li class="header__user-navigation-item">
+            <a class="header__user-navigation-link" href="#">
+              <div class="header__link-icon_search"></div>
+            </a>
+          </li>
+          <li class="header__user-navigation-item">
+            <a class="header__user-navigation-link" href="#">
+              <div class="header__link-icon_login"></div>Вход
+            </a>
+          </li>
+          <li class="header__user-navigation-item">
+            <a class="header__user-navigation-link" href="#">
+              <div class="header__link-icon_basket"></div>
+              <span class="header__basket-counter">2</span>товара
+            </a>
+          </li>
+        </ul>
+      </nav>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+    </header>
+
 
   </body>
 </html>
