Add styles of header

--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
       <nav class="header__user-navigation">
         <ul class="header__user-navigation-list">
           <li class="header__user-navigation-item">
-            <a class="header__user-navigation-link" href="#">
+            <a class="header__user-navigation-link header__search-link" href="#">
               <div class="header__link-icon_search"></div>
             </a>
           </li>
           <li class="header__user-navigation-item">
-            <a class="header__user-navigation-link" href="#">
+            <a class="header__user-navigation-link header__login-link" href="#">
               <div class="header__link-icon_login"></div>Вход
             </a>
           </li>
           <li class="header__user-navigation-item">
-            <a class="header__user-navigation-link" href="#">
+            <a class="header__user-navigation-link header__basket-link" href="#">
               <div class="header__link-icon_basket"></div>
               <span class="header__basket-counter">2</span>товара
             </a>
