--- a/index.html
+++ b/index.html
@@ -201,6 +201,17 @@
         </ul>
       </section>
 
+      <!-- Блок benefits -->
+      <section class="benefits">
+        <h2 class="benefits__title">Магазин Глейси – это онлайн и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
+        <ul class="benefits__list">
+          <li class="benefits__item item_type_production">Всё наше мороженое изготавливается на собственном производстве с использованием современного оборудования и проверенных временем технологий.</li>
+          <li class="benefits__item item_type_ingredients">Закупка ингредиентов производится только <br>у проверенных фермерских хозяйств, с которыми нас связывает долговременное сотрудничество.</li>
+          <li class="benefits__item item_type_farmers">Для приготовления мороженого используются сливки и молоко высочайшего качества. Все ингредиенты <br>и добавки произведены из натурального сырья.</li>
+          <li class="benefits__item item_type_dilivery">Доставка нашего мороженого осуществляется в специальном термопаке, который не даёт мороженому растаять и позволяет сохранить превосходный вкус.</li>
+        </ul>
+      </section>
+
     </main>
 
 
