Adds markup of subscription block

--- a/index.html
+++ b/index.html
@@ -212,8 +212,28 @@
         </ul>
       </section>
 
-    </main>
+      <!-- Блок с ссылкой на блог и предложением подписки -->
+      <div class="subscription__wrapper">
 
+        <!-- Карточка с ссылкой на блог -->
+        <a class="article">
+          <span class="article__notice">Новое в нашем блоге</span>
+          <h2 class="article__title">10 способов сервировки фруктовых щербетов к столу</h2>
+        </a>
+
+        <!-- Карточка с предложением подписки -->
+        <section class="subscription">
+          <p class="subscription__text">Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+          <form class="subscription__form">
+            <label class="visually-hidden" for="subscription-email">Поле для ввода e-mail.</label>
+            <input class="subscription__input" placeholder="email@example.com" type="email" name="subscription-email" id="subscription-email" required>
+            <button class="subscription__button button_color_pink" type="submit">Отправить</button>
+          </form>
+        </section>
+
+      </div>
+
+    </main>
 
   </body>
 </html>
