Adds markup of dilivery block

--- a/index.html
+++ b/index.html
@@ -216,22 +216,32 @@
       <div class="subscription__wrapper">
 
         <!-- Карточка с ссылкой на блог -->
-        <a class="article">
+        <a class="article" href="#">
           <span class="article__notice">Новое в нашем блоге</span>
-          <h2 class="article__title">10 способов сервировки фруктовых щербетов к столу</h2>
+          <h2 class="article__title">10 способов сервировки фруктовых щербетов <br>к столу</h2>
         </a>
 
         <!-- Карточка с предложением подписки -->
         <section class="subscription">
-          <p class="subscription__text">Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+          <p class="subscription__text">Подпишитесь на нашу сладкую рассылку и будьте всегда <br>в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
           <form class="subscription__form">
             <label class="visually-hidden" for="subscription-email">Поле для ввода e-mail.</label>
-            <input class="subscription__input" placeholder="email@example.com" type="email" name="subscription-email" id="subscription-email" required>
+            <input class="subscription__input input" placeholder="email@example.com" type="email" name="subscription-email" id="subscription-email" required>
             <button class="subscription__button button_color_pink" type="submit">Отправить</button>
           </form>
         </section>
 
       </div>
+
+      <section class="dilivery">
+        <div class="dilivery__text-container">
+          <h2 class="dilivery__title">Доставка любимого мороженого на дом</h2>
+          <p class="dilivery__text">Хочется полакомиться любимым десертом, но нет времени съездить в магазин? Закажите доставку мороженого на дом, и курьер привезёт вам ваш заказ в течение часа!</p>
+        </div>
+        <form class="dilivery__form">
+
+        </form>
+      </section>
 
     </main>
 
