--- a/index.html
+++ b/index.html
@@ -95,6 +95,33 @@
     <!-- Контентная часть страницы -->
     <main class="main">
 
+      <section class="slider__container">
+        <ul class="slider">
+
+        <!-- Первый слайд -->
+          <li class="slider__item">
+            <div class="slider__left">
+              <h1 class="slider__title">Нежный пломбир <br>с клубничным джемом</h1>
+              <p class="slider__description">Натуральное мороженое из свежих сливок <br>и молока с вкуснейшим клубничным джемом – это идеальный десерт для всей семьи. </p>
+              <button class="slider__button-order" type="button">Заказать</button>
+            </div>
+
+            <div class="sloder__right">
+              <button class="slider__button button_scroll-left">
+                <svg width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M5.86474 11.1352C6.12443 11.3949 6.54549 11.3949 6.80519 11.1352C7.06489 10.8755 7.06489 10.4545
+                  6.80519 10.1948L2.60391 5.99351L6.80523 1.79219C7.06492 1.53249 7.06492 1.11144 6.80522 0.85174C6.54553 0.592042 6.12447 0.592042 5.86477 0.85174L1.19606
+                  5.52045C1.19511 5.52139 1.19417 5.52233 1.19322 5.52328C0.933522 5.78298 0.933522 6.20403 1.19322 6.46373L5.86474 11.1352Z" fill="#FCFCFC"/>
+                </svg>
+              </button>
+              <img class="slider__image-main" src="./images/slider-ice-strawberry.png" alt="Фото пломбира с клубничным джемом.">
+              <button class="slider__button button_scroll-right"></button>
+            </div>
+          </li>
+
+        </ul>
+      </section>
+
       <!-- Блок presents -->
       <section class="presents">
         <h2 class="presents__title">Заказывайте мороженое и получайте подарки!</h2>
@@ -297,14 +324,14 @@
 
         <li class="socnetworks-item">
           <a class="socnetworks-link" href="https://t.me/s/htmlacademy">
-            <svg class="socnetworks-icon" aria-hidden="true" focusable="false" width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="socnetworks-icon" aria-hidden="true" focusable="false" width="28" height="28" viewBox="0 0 28 28" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
               <path class="socnetworks-path" fill-rule="evenodd" clip-rule="evenodd" d="M26 14C26 20.627 20.627 26 14 26C7.373 26 2 20.627 2 14C2 7.373 7.373 2 14 2C20.627 2 26 7.373 26 14ZM14.43 10.859C13.263 11.344
               10.93 12.349 7.432 13.873C6.864 14.099 6.566 14.32 6.539 14.536C6.493 14.902 6.951 15.046 7.573 15.241C7.658 15.268 7.746 15.295 7.836 15.325C8.449 15.524 9.273 15.757 9.701 15.766C10.09
               15.774 10.524 15.614 11.003 15.286C14.271 13.079 15.958 11.964 16.064 11.94C16.139 11.923 16.243 11.901 16.313 11.964C16.383 12.026 16.376 12.144 16.369 12.176C16.323 12.369 14.529 14.038
               13.599 14.902C13.309 15.171 13.104 15.362 13.062 15.406C12.968 15.503 12.872 15.596 12.78 15.685C12.21 16.233 11.784 16.645 12.804 17.317C13.294 17.64 13.686 17.907 14.077 18.173C14.504
               18.464 14.93 18.754 15.482 19.116C15.622 19.208 15.756 19.303 15.887 19.396C16.384 19.751 16.831 20.069 17.383 20.019C17.703 19.989 18.035 19.688 18.203 18.789C18.6 16.663 19.382 12.059
-              19.563 10.161C19.574 10.0034 19.5673 9.84509 19.543 9.689C19.5285 9.56293 19.4671 9.44693 19.371 9.364C19.228 9.247 19.006 9.222 18.906 9.224C18.455 9.232 17.763 9.473 14.43 10.859Z" fill="#FCFCFC"/>
-              <rect class="socnetworks-rect" x="1" y="1" width="26" height="26" rx="13" stroke="#FCFCFC" stroke-opacity="0.3" stroke-width="2"/>
+              19.563 10.161C19.574 10.0034 19.5673 9.84509 19.543 9.689C19.5285 9.56293 19.4671 9.44693 19.371 9.364C19.228 9.247 19.006 9.222 18.906 9.224C18.455 9.232 17.763 9.473 14.43 10.859Z" fill="currentColor"/>
+              <rect class="socnetworks-rect" x="1" y="1" width="26" height="26" rx="13" stroke="currentColor" stroke-opacity="0.3" stroke-width="2"/>
             </svg>
           </a>
         </li>
