Adds part of slider with images

--- a/index.html
+++ b/index.html
@@ -103,26 +103,32 @@
             <div class="slider__left">
               <h1 class="slider__title">Нежный пломбир <br>с клубничным джемом</h1>
               <p class="slider__description">Натуральное мороженое из свежих сливок <br>и молока с вкуснейшим клубничным джемом – это идеальный десерт для всей семьи. </p>
-              <button class="slider__button-order" type="button">Заказать</button>
+              <button class="slider__button-order" type="submit">Заказать</button>
             </div>
 
             <ul class="slider__right">
-              <li class="">
-                <button class="slider__button button_scroll-left">
+              <li class="slider__first-item">
+                <button class="slider__button button_scroll-left" type="button">
                   <svg width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M5.86474 11.1352C6.12443 11.3949 6.54549 11.3949 6.80519 11.1352C7.06489 10.8755 7.06489 10.4545
                     6.80519 10.1948L2.60391 5.99351L6.80523 1.79219C7.06492 1.53249 7.06492 1.11144 6.80522 0.85174C6.54553 0.592042 6.12447 0.592042 5.86477 0.85174L1.19606
                     5.52045C1.19511 5.52139 1.19417 5.52233 1.19322 5.52328C0.933522 5.78298 0.933522 6.20403 1.19322 6.46373L5.86474 11.1352Z" fill="#FCFCFC"/>
                   </svg>
                 </button>
-                <img class="slider__image-main" width="350" height="507" src="./images/slider-ice-strawberry.png" alt="Фото пломбира с клубничным джемом.">
-                <button class="slider__button button_scroll-right">
+                <img class="slider__first-image" width="306" height="507" src="./images/slider-ice-strawberry.png" alt="Фото пломбира с клубничным джемом.">
+                <button class="slider__button button_scroll-right" type="button">
                   <svg width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M5.86474 11.1352C6.12443 11.3949 6.54549 11.3949 6.80519 11.1352C7.06489 10.8755 7.06489 10.4545
                     6.80519 10.1948L2.60391 5.99351L6.80523 1.79219C7.06492 1.53249 7.06492 1.11144 6.80522 0.85174C6.54553 0.592042 6.12447 0.592042 5.86477 0.85174L1.19606
                     5.52045C1.19511 5.52139 1.19417 5.52233 1.19322 5.52328C0.933522 5.78298 0.933522 6.20403 1.19322 6.46373L5.86474 11.1352Z" fill="#FCFCFC"/>
                   </svg>
                 </button>
+              </li>
+              <li class="slider__second-item">
+                <img class="slider__second-image" width="90" height="150" src="./images/slider-ice-banana.png" alt="Фото сливочного мороженого со вкусом банана.">
+              </li>
+              <li class="slider__third-item">
+                <img class="slider__third-image" width="90" height="150" src="./images/slider-ice-caramel.png" alt="Фото карамельного пломбира с маршмеллоу.">
               </li>
             </ul>
 
