Adds basket tooltip

--- a/index.html
+++ b/index.html
@@ -118,6 +118,49 @@
               </svg>
               <span class="header__basket-counter">2</span>товара
             </a>
+
+            <!-- Корзина -->
+            <div class="basket">
+              <h2 class="basket__title">Корзина</h2>
+              <ul class="basket__list">
+
+                <li class="basket__item">
+                  <a class="basket__item-link" href="#">
+                    <img class="basket__item-image" width="51" height="51" src="./images/catalog-raspberry.png" alt="Малиновое мороженое.">
+                    <div class="basket__item-container">
+                      <h3 class="basket__item-title">Малинка</h3>
+                      <span class="basket__item-amount">1 кг х 310 &#8381;</span>
+                    </div>
+                  </a>
+                  <span class="basket__item-price">310 &#8381;</span>
+                  <button class="basket__close-button" type="button">
+                    <span class="visually-hidden">Удалить товар из корзины.</span>
+                  </button>
+                </li>
+
+                <li class="basket__item">
+                  <a class="basket__item-link" href="#">
+                    <img class="basket__item-image" width="51" height="51" src="./images/catalog-bubble-gum.png" alt="Мороженое бабл-гам.">
+                    <div class="basket__item-container">
+                      <h3 class="basket__item-title">Бабл-гам</h3>
+                      <span class="basket__item-amount">1,5 кг х 320 &#8381;</span>
+                    </div>
+                  </a>
+                  <span class="basket__item-price">480 &#8381;</span>
+                  <button class="basket__close-button" type="button">
+                    <span class="visually-hidden">Удалить товар из корзины.</span>
+                  </button>
+                </li>
+
+              </ul>
+
+              <div class="basket__button-container">
+                <button class="basket__button button_color_pink" type="button">Оформить заказ</button>
+                <span class="basket__totlal-price">Итого: 790 ₽</span>
+              </div>
+
+            </div>
+
           </li>
 
         </ul>
