--- a/index.html
+++ b/index.html
@@ -518,19 +518,37 @@
         <form class="dilivery__form" action="https://echo.htmlacademy.ru/" method="post">
           <p class="dilivery__form-text">Укажите адрес и дату доставки, и мы свяжемся с вами, чтобы подтвердить заказ.</p>
           <div class="dilivery__inputs-container">
-            <p class="dilivery__data">
-              <label class="dilivery__label" for="data-input">Дата</label>
+            <div class="dilivery__data">
+
+              <!-- Tooltip -->
+              <div class="dilivery__tooltip-container">
+                <label class="dilivery__label" for="data-input">Дата</label>
+                <span class="dilivery__tooltip">
+                  <button class="dilivery__tooltip-button"></button>
+                  <span class="dilivery__tooltip-text">Введите дату доставки</span>
+                </span>
+              </div>
+
               <input class="dilivery__data-input input" type="data" name="data-input" id="data-input" placeholder="01.04.2020" required>
-            </p>
-            <p class="dilivery__telefone">
+            </div>
+            <div class="dilivery__telefone">
               <label class="dilivery__label" for="telefone-input">Телефон</label>
               <input class="dilivey__telefone-input input" type="tel" name="telefone-input" id="telefone-input" placeholder="+7 800 999-00-00" required>
-            </p>
+            </div>
           </div>
-          <p class="dilivery__address">
-            <label class="dilivery__label" for="address-input">Адрес</label>
+          <div class="dilivery__address">
+
+            <!-- Tooltip -->
+            <div class="dilivery__tooltip-container">
+              <label class="dilivery__label" for="address-input">Адрес</label>
+              <span class="dilivery__tooltip">
+                <button class="dilivery__tooltip-button"></button>
+                <span class="dilivery__tooltip-text">Введите название улицы, дома и квартиры</span>
+              </span>
+            </div>
+
             <input class="dilivery__address-input input" type="text" name="address-input" id="address-input" placeholder="ул. Большая Конюшенная, 19/8" required>
-          </p>
+          </div>
           <button class="dilivery__button button_color_pink" type="submit">Отправить</button>
         </form>
 
