Adds radio filter

--- a/catalog.html
+++ b/catalog.html
@@ -259,7 +259,47 @@
             </label>
           </li>
         </ul>
+      </fieldset>
 
+      <fieldset class="filter__fieldset">
+        <legend class="filter__title">Наполнители:</legend>
+        <ul class="filter__checkbox-list">
+          <li class="filter__checkbox-item">
+            <label class="filter__checkbox-container" for="chocolate">
+              <input class="visually-hidden filter__checkbox-input" type="checkbox" name="chocolate">
+              <span class="filter__checkbox-mark"></span>
+              <span class="filter__checkbox-label">шоколадные</span>
+            </label>
+          </li>
+          <li class="filter__checkbox-item">
+            <label class="filter__checkbox-container" for="sprinkles">
+              <input class="visually-hidden filter__checkbox-input" type="checkbox" name="sprinkles" checked>
+              <span class="filter__checkbox-mark"></span>
+              <span class="filter__checkbox-label">сахарные посыпки</span>
+            </label>
+          </li>
+          <li class="filter__checkbox-item">
+            <label class="filter__checkbox-container" for="fruits">
+              <input class="visually-hidden filter__checkbox-input" type="checkbox" name="fruits">
+              <span class="filter__checkbox-mark"></span>
+              <span class="filter__checkbox-label">фрукты</span>
+            </label>
+          </li>
+          <li class="filter__checkbox-item">
+            <label class="filter__checkbox-container" for="syrups">
+              <input class="visually-hidden filter__checkbox-input" type="checkbox" name="syrups">
+              <span class="filter__checkbox-mark"></span>
+              <span class="filter__checkbox-label">сиропы</span>
+            </label>
+          </li>
+          <li class="filter__checkbox-item">
+            <label class="filter__checkbox-container" for="jams">
+              <input class="visually-hidden filter__checkbox-input" type="checkbox" name="jams">
+              <span class="filter__checkbox-mark"></span>
+              <span class="filter__checkbox-label">джемы</span>
+            </label>
+          </li>
+        </ul>
       </fieldset>
 
 
