--- a/catalog.html
+++ b/catalog.html
@@ -261,12 +261,13 @@
         </ul>
       </fieldset>
 
-      <fieldset class="filter__fieldset">
+      <!-- Выбор наполнителя -->
+      <fieldset class="filter__fieldset filter__fieldset_checkbox">
         <legend class="filter__title">Наполнители:</legend>
         <ul class="filter__checkbox-list">
           <li class="filter__checkbox-item">
             <label class="filter__checkbox-container" for="chocolate">
-              <input class="visually-hidden filter__checkbox-input" type="checkbox" name="chocolate">
+              <input class="visually-hidden filter__checkbox-input" type="checkbox" name="chocolate" checked>
               <span class="filter__checkbox-mark"></span>
               <span class="filter__checkbox-label">шоколадные</span>
             </label>
@@ -301,6 +302,8 @@
           </li>
         </ul>
       </fieldset>
+
+      <button class="filter__button" type="submit">Применить</button>
 
 
     </form>
