Adds styles of pagination

--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
               13.599 14.902C13.309 15.171 13.104 15.362 13.062 15.406C12.968 15.503 12.872 15.596 12.78 15.685C12.21 16.233 11.784 16.645 12.804 17.317C13.294 17.64 13.686 17.907 14.077 18.173C14.504
               18.464 14.93 18.754 15.482 19.116C15.622 19.208 15.756 19.303 15.887 19.396C16.384 19.751 16.831 20.069 17.383 20.019C17.703 19.989 18.035 19.688 18.203 18.789C18.6 16.663 19.382 12.059
               19.563 10.161C19.574 10.0034 19.5673 9.84509 19.543 9.689C19.5285 9.56293 19.4671 9.44693 19.371 9.364C19.228 9.247 19.006 9.222 18.906 9.224C18.455 9.232 17.763 9.473 14.43 10.859Z" fill="currentColor"/>
-              <rect class="socnetworks-rect" x="1" y="1" width="26" height="26" rx="13" stroke="currentColor" stroke-opacity="0.3" stroke-width="2"/>
+              <!-- <rect class="socnetworks-rect" x="1" y="1" width="26" height="26" rx="13" stroke="currentColor" stroke-opacity="0.3" stroke-width="2"/> -->
             </svg>
           </a>
         </li>
